@@ -369,8 +369,8 @@ Forces players to climb, fly, or use a ladder through the exit or room with this
 PROP_CLOSECOMMAND=\
 Property   : Prop_CloseCommand\n\r\
 Targets    : Containers, Exits\n\r\
-Parameters : [COMMAND WORD] ([PARMS...];...\n\r\
-Example    : twist knob;tw knob;twi knob\n\r\
+Parameters : [COMMAND WORD] ([PARMS...]/NOCLOSE/MESSAGE=[STR];...\n\r\
+Example    : twist knob;tw knob;twi knob;noclose\n\r\
 Example    : smack botto*\n\r\
 Description: \n\r\
 When applied to an open container or exit, this property will force \
@@ -378,7 +378,10 @@ the affected openable to close and maybe lock when the command phrase is entered
 by the user in its presence.  The command word must match exactly, and the \
 command entered must otherwise be completely invalid.  PARMS arguments must also \
 match exactly, although any PARM arg may end with * to use a starting string wildcard. \
-A PARM argument may also end with ** to match the rest of the users entered command string.
+A PARM argument may also end with ** to match the rest of the users entered command string. \
+In addition to a series of command words, you can also use the NOCLOSE keyword to also \
+disable the standard close command for the exit/item, or use MESSAGE= to change the \
+message sent to the room, which can use <S-NAME> for the actor, and <T-NAME> for the item.
 
 PROP_CLOSEDDAYNIGHT=\
 Property   : Prop_ClosedDayNight\n\r\
@@ -1299,7 +1302,7 @@ Admins are exempt from the restrictions imposed.
 PROP_OPENCOMMAND=\
 Property   : Prop_OpenCommand\n\r\
 Targets    : Containers, Exits\n\r\
-Parameters : [COMMAND WORD] ([PARMS...];...\n\r\
+Parameters : [COMMAND WORD] ([PARMS...]/NOOPEN/MESSAGE=[STR];...\n\r\
 Example    : twist knob;tw knob;twi knob\n\r\
 Example    : smack botto*\n\r\
 Description: \n\r\
@@ -1308,7 +1311,10 @@ the affected openable to unlock and open when the command phrase is entered \
 by the user in its presence.  The command word must match exactly, and the \
 command entered must otherwise be completely invalid.  PARMS arguments must also \
 match exactly, although any PARM arg may end with * to use a starting string wildcard. \
-A PARM argument may also end with ** to match the rest of the users entered command string.
+A PARM argument may also end with ** to match the rest of the users entered command string. \
+In addition to a series of command words, you can also use the NOOPEN keyword to also \
+disable the standard open command for the exit/item, or use MESSAGE= to change the \
+message sent to the room, which can use <S-NAME> for the actor, and <T-NAME> for the item.
 
 PROP_OPENPASSWORD=\
 Property   : Prop_OpenPassword\n\r\
