@@ -1,6 +1,7 @@
 # Build 5.9.9 Release ?/?/2019
   1. New prayers: empower unholy weapon, morph unholy weapon, faithful hellhound, discipline
   2. New prayers: remove inhibitions
+  3. Prop_OpenCommand and Prop_CloseCommand have expanded arguments.
   
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
